# fastapi_strawberry

./: .env.example  .flake8  .isort.cfg  alembic.ini  compose.yml  dockerfile  makefile  pyproject.toml  pyrightconfig.json
.githooks/: pre-commit  pre-push
alembic/: env.py
alembic/versions/: 2024_07_19_1544-0733fa18735d_add_todos_table.py  2024_07_30_1441-21bb8f41253c_init_tables.py  2024_07_31_1043-ba963ba4038f_init_tables.py
src/: main.py
src/auth/api/: auth.py
src/auth/graphql/: schemas.py
src/auth/libraries/: authenticate.py  decorator.py  dependencies.py  token.py
src/auth/models/: user.py
src/auth/repositories/: user.py
src/auth/schemas/: token.py  user.py  users.py
src/core/: dependencies.py  dependeny.py
src/core/databases/models/: __init__.py  db_context.py
src/core/repositories/: bases.py
src/core/schemas/: base.py  graphql.py  pydantic.py
src/core/schemas/enums/: sort_direction.py
src/core/schemas/graphql/: base.py
src/core/schemas/pydantic/: base.py  (+1 more)
src/core/settings/: config.py  database.py
src/errors/: exception.py
src/errors/handlers/: exception.py  pydantic.py
src/errors/messages/: base.py  error_message.py
src/gunicorn/: config.py  worker.py
src/todos/enums/: todo.py  todo_status.py
src/todos/graphql/: mutation.py  ouery.py  query.py  schemas.py  types.py
src/todos/models/: todo.py
src/todos/repositories/: todo.py
src/todos/schemas/: todo.py
src/users/graphql/: mutation.py  query.py  schemas.py  types.py
src/users/models/: user.py
src/users/repositories/: user.py
src/users/schemas/: user.py
(+4 files in other folders)
